--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.1",
+    "morgan": "^1.8.1",
     "validator": "^6.2.1"
   }
 }
